--- a/history.txt
+++ b/history.txt
@@ -1,12 +1,7 @@
 docker-compose down
 docker-compose up -d
 
-wsl
-    getent group docker | cut -d: -f3
-        1001
+import dashboard
+    https://grafana.com/grafana/dashboards/61-telegraf-metrics/
 
-docker exec docker-telegraf-influx-grafana-stack-telegraf-1 whoami
-
-sudo usermod -aG docker your_username
-
-stat /var/run/docker.sock
+docker compose restart telegraf
